# ntia-itm

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
ITM/: CMakeLists.txt
ITM/include/ITM/: Enums.h  ItmCommonCalculator.h  ItmConstructs.h  ItmHelpers.h  MathHelpers.h  itm.h
ITM/src/: CalcHorizonParameters.cpp  CalcSigmaH.cpp  CalcTerrainIrregularity.cpp  CalcTerrainRoughness.cpp  CalcTroposcatterGainFunction.cpp  ComputeDeltaH.cpp  DiffractionLoss.cpp  FindHorizons.cpp  FreeSpaceLoss.cpp  FresnelIntegral.cpp  H0Function.cpp  ITM_P2P.cpp  InitializeArea.cpp  InitializeP2P.cpp  InitializePointToPoint.cpp  InverseComplementaryCumulativeDistributionFunction.cpp  KnifeEdgeDiffraction.cpp  LineOfSightLoss.cpp  LinearLeastSquaresFit.cpp  LongleyRice.cpp  QuickPfl.cpp  SigmaHFunction.cpp  SmoothEarthDiffraction.cpp  TerrainRoughness.cpp  TroposcatterLoss.cpp  ValidateInputs.cpp  Variability.cpp  itm_area.cpp  itm_p2p.cpp
